partial/force-app/main/default/objects/Document_Signing_Group__c/Document_Signing_Group__c.object-meta.xml
<CustomObject>
    <label>Document Signing Group</label>
    <nameField>
        <displayFormat>DG-{00000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Signing Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>