partial/force-app/main/default/objects/Document_Signing_Group__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Account__r.FirstName + &quot; &quot; + Account__r.LastName + &quot; - &quot; + text(year( Process_Start_Date__c ))+ &quot;/&quot; + text(month ( Process_Start_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>