partial/force-app/main/default/objects/Document_Signing_Group__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Offer__c.Opportunity__r.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Offer__c</referenceTo>
    <relationshipLabel>Document Signing Groups</relationshipLabel>
    <relationshipName>Document_Signing_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>