partial/force-app/main/default/objects/Document_Signing_Group__c/fields/Process_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Process_End_Date__c</fullName>
    <label>Process End Date</label>
    <type>Date</type>
</CustomField>