partial/force-app/main/default/objects/Document_Signing_Group__c/fields/Process_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Process_Start_Date__c</fullName>
    <label>Process Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>